<resources>
    <string name="app_name">Live Football Mbiret</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_top_scores">Top Scorers</string>
    <string name="menu_previous_winners">Previous Winners</string>
    <string name="menu_sports_results">Sports Results</string>
    <string name="menu_live">Live</string>
    <string name="menu_highlights">Highlights</string>
    <string name="menu_breaking_news">Breaking News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>